@@ -2,9 +2,7 @@ package org.lodder.subtools.multisubdownloader.lib.control.subtitles;
 
 import static java.util.function.Predicate.*;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.lodder.subtools.multisubdownloader.lib.control.subtitles.filters.ExactNameFilter;
 import org.lodder.subtools.multisubdownloader.lib.control.subtitles.filters.Filter;
@@ -19,44 +17,44 @@ import org.slf4j.LoggerFactory;
 public class Filtering {
 
     private final Settings settings;
-    private final Filter exactname;
+    private final Filter exactName;
     private final Filter keyword;
-    private final Filter releasegroup;
+    private final Filter releaseGroup;
 
     private static final Logger LOGGER = LoggerFactory.getLogger(Filtering.class);
 
     public Filtering(Settings settings) {
         this.settings = settings;
-        exactname = new ExactNameFilter();
-        keyword = new KeywordFilter();
-        releasegroup = new ReleasegroupFilter();
+        this.exactName = new ExactNameFilter();
+        this.keyword = new KeywordFilter();
+        this.releaseGroup = new ReleasegroupFilter();
     }
 
-    public List<Subtitle> getFiltered(List<Subtitle> listFoundSubtitles, Release release) {
-        LOGGER.trace("getFiltered: release [{}] available subtitles [{}]", release, listFoundSubtitles);
+    public List<Subtitle> getFiltered(List<Subtitle> foundSubtitles, Release release) {
+        LOGGER.trace("getFiltered: release [{}] available subtitles [{}]", release, foundSubtitles);
 
-        List<Subtitle> listFilteredSubtitles = new ArrayList<>();
+        List<Subtitle> filteredSubtitles;
 
-        List<Subtitle> subtitles = listFoundSubtitles;
+        List<Subtitle> subtitles = foundSubtitles;
         if (settings.isOptionSubtitleExcludeHearingImpaired()) {
-            subtitles = subtitles.stream().filter(not(Subtitle::isHearingImpaired)).collect(Collectors.toList());
+            subtitles = subtitles.stream().filter(not(Subtitle::isHearingImpaired)).toList();
         }
 
         if (settings.isOptionSubtitleKeywordMatch()) {
-            listFilteredSubtitles = keyword.doFilter(release, subtitles);
-            if (listFilteredSubtitles.size() > 0) {
-                subtitles = listFilteredSubtitles;
+            filteredSubtitles = keyword.doFilter(release, subtitles);
+            if (!filteredSubtitles.isEmpty()) {
+                subtitles = filteredSubtitles;
             }
-            listFilteredSubtitles = releasegroup.doFilter(release, subtitles);
-            if (listFilteredSubtitles.size() > 0) {
-                subtitles = listFilteredSubtitles;
+            filteredSubtitles = releaseGroup.doFilter(release, subtitles);
+            if (!filteredSubtitles.isEmpty()) {
+                subtitles = filteredSubtitles;
             }
         }
 
         if (settings.isOptionSubtitleExactMatch()) {
-            listFilteredSubtitles = exactname.doFilter(release, subtitles);
-            if (listFilteredSubtitles.size() > 0) {
-                subtitles = listFilteredSubtitles;
+            filteredSubtitles = exactName.doFilter(release, subtitles);
+            if (!filteredSubtitles.isEmpty()) {
+                subtitles = filteredSubtitles;
             }
         }
 
